--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".activity.JemputActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan" ></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.LoginActivity"
             android:label="@string/app_name"
@@ -47,13 +47,21 @@
             android:name=".activity.DetailScannActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.GenerateqrActivity"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.TukarpoinActivity"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan" />
 
         <meta-data
             android:name="com.google.android.gms.version.DEPENDENCIES"
             android:value="barcode" />
     </application>
-    <uses-feature android:name="android.hardware.camera" />
 
+    <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
