--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
     implementation 'me.dm7.barcodescanner:zxing:1.9'
     implementation 'com.karumi:dexter:5.0.0'
+
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+
 }
