--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:2.1.0'
 
+    implementation "commons-logging:commons-logging-api:1.1"
 }
