--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.PanduanActivity"></activity>
+        <activity android:name=".activity.RiwayatJemputSampahActivity"></activity>
+        <activity
+            android:name="com.google.firebase.auth.internal.FederatedSignInActivity"
+            android:excludeFromRecents="true"
+            android:exported="true"
+            android:launchMode="singleInstance"
+            android:permission="com.google.firebase.auth.api.gms.permission.LAUNCH_FEDERATED_SIGN_IN"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            tools:replace="android:launchMode" />
+        <activity android:name=".activity.PanduanActivity" />
         <activity android:name=".activity.BantuanAcitivity" />
         <activity android:name=".activity.VerifyPhoneRegisterActivity" />
         <activity android:name=".activity.VerifyPhoneLoginActivity" />
@@ -78,15 +87,18 @@
         <meta-data
             android:name="com.google.android.gms.version.DEPENDENCIES"
             android:value="barcode" />
+
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+
     </application>
-    <uses-feature android:name="android.hardware.camera" />
 
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
 
 </manifest>
