--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.RiwayatJemputSampahActivity"></activity>
+        <activity android:name=".activity.RiwayatJemputSampahActivity" />
         <activity
             android:name="com.google.firebase.auth.internal.FederatedSignInActivity"
             android:excludeFromRecents="true"
@@ -25,7 +25,6 @@
         <activity android:name=".activity.PanduanActivity" />
         <activity android:name=".activity.BantuanAcitivity" />
         <activity android:name=".activity.VerifyPhoneRegisterActivity" />
-        <activity android:name=".activity.VerifyPhoneLoginActivity" />
         <activity android:name=".activity.DetailTugasActivity" />
         <activity android:name=".activity.DetailTukarPoinActivity" />
         <activity
@@ -48,8 +47,7 @@
             android:name=".activity.LoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan">
-        </activity>
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/SplashTheme">
@@ -92,17 +90,18 @@
             android:name="com.google.android.gms.version.DEPENDENCIES"
             android:value="barcode" />
 
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
-
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
     </application>
+    <uses-feature android:name="android.hardware.camera" />
 
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 </manifest>
