--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,9 @@
             android:name=".activity.TukarpoinActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".activity.RiwayatRelawanActivity"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan" />
 
         <meta-data
             android:name="com.google.android.gms.version.DEPENDENCIES"
