--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.polinemapay">
 
-    <uses-permission android:name="android.permission.CALL_PHONE" />
     <application
         android:name=".app.AppController"
         android:allowBackup="true"
@@ -14,6 +13,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activity.DetailRiwayatJemputSampah"></activity>
         <activity android:name=".activity.RiwayatJemputSampahActivity" />
         <activity
             android:name="com.google.firebase.auth.internal.FederatedSignInActivity"
@@ -48,7 +48,7 @@
             android:name=".activity.LoginActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/SplashTheme">
@@ -86,7 +86,8 @@
             android:name=".activity.TukarpoinActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activity.RiwayatRelawanActivity"
+        <activity
+            android:name=".activity.RiwayatRelawanActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan" />
 
@@ -98,14 +99,16 @@
             android:name="org.apache.http.legacy"
             android:required="false" />
     </application>
-    <uses-feature android:name="android.hardware.camera" />
 
     <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
 </manifest>
